# MASKINSPRAAK8000

./: .gitignore  LICENSE  MASKINSPRAAK8000.cabal  README  README.markdown  Setup.hs
Maskinspraak8000/: AST.hs  Console.hs  Interpreter.hs  Main.hs
Maskinspraak8000/Parser/: Industrial.hs  Lean.hs
examples/: echo.M8i  echo.M8l  echo.M8s  fact.M8l
