Name:               maskinspraak8000
Version:            0.1
Description:        Toy language built on continuation passing style functions
License:            BSD3
License-File:       LICENSE
Author:             Rasmus Svensson
Maintainer:         raek@raek.se
Build-type:         Simple
Cabal-Version:      >= 1.2

Library
  Build-Depends:    base >= 3 && < 5, containers, parsec
  Exposed-modules:  Maskinspraak8000.AST,
                    Maskinspraak8000.Interpreter,
                    Maskinspraak8000.Parser.Lean
--  ghc-options:      -Wall

Executable M8000
  Main-Is:          Maskinspraak8000/Main.hs
  Build-Depends:    base >= 3 && < 5